@@ -1960,8 +1960,8 @@ Document page. Often used with <i>psPageSize</i>.</font></td>
 <td><font size=-1>unsigned int depth_</font></td>
 
 <td><font size=-1>Image depth. Used to specify the bit depth when reading
-or writing&nbsp; raw images. Defaults to the quantum depth that ImageMagick
-is compiled with.</font></td>
+or writing&nbsp; raw images or when the output format supports multiple
+depths. Defaults to the quantum depth that ImageMagick is compiled with.</font></td>
 </tr>
 
 <tr>
